# moveit_calibration

./: .ci.clang_tidy  .ci.prepare_codecov  .pre-commit-config.yaml  .travis.yml  LICENSE  README.md  moveit_calibration.repos  upstream.rosinstall
.github/ISSUE_TEMPLATE/: first_timer_only.md
.github/workflows/: ci.yaml  format.yaml  industrial_ci_action.yml
.travis/: before_script.sh
moveit_calibration_demos/: CMakeLists.txt  moveit_calibration_demos.repos  package.xml
moveit_calibration_demos/.docker/: Dockerfile  build.bash  dev.bash  run.bash
moveit_calibration_demos/launch/: _gz_moveit_calibration.launch.py  gz_eye_in_hand_aruco.launch.py  gz_eye_in_hand_charuco.launch.py  gz_eye_to_hand_aruco.launch.py  gz_eye_to_hand_charuco.launch.py
moveit_calibration_demos/rviz/: eye_in_hand_aruco.rviz  eye_in_hand_charuco.rviz  eye_to_hand_aruco.rviz  eye_to_hand_charuco.rviz
moveit_calibration_demos/worlds/: eye_in_hand_aruco.sdf  eye_in_hand_charuco.sdf  eye_to_hand_aruco.sdf  eye_to_hand_charuco.sdf
moveit_calibration_gui/: CHANGELOG.rst  CMakeLists.txt  handeye_calibration_rviz_plugin_description.xml  package.xml
moveit_calibration_gui/handeye_calibration_rviz_plugin/: CMakeLists.txt
moveit_calibration_gui/handeye_calibration_rviz_plugin/include/moveit/handeye_calibration_rviz_plugin/: handeye_calibration_display.h  handeye_calibration_frame.h  handeye_calibration_gui.h  handeye_context_widget.h  handeye_control_widget.h  handeye_target_widget.h
moveit_calibration_gui/handeye_calibration_rviz_plugin/src/: handeye_calibration_display.cpp  handeye_calibration_frame.cpp  handeye_calibration_gui.cpp  handeye_context_widget.cpp  handeye_control_widget.cpp  handeye_target_widget.cpp  plugin_init.cpp
moveit_calibration_plugins/: CHANGELOG.rst  CMakeLists.txt  handeye_calibration_solver_plugin_description.xml  handeye_calibration_target_plugin_description.xml  package.xml
moveit_calibration_plugins/handeye_calibration_solver/: CMakeLists.txt
moveit_calibration_plugins/handeye_calibration_solver/include/moveit/handeye_calibration_solver/: handeye_solver_base.h  handeye_solver_default.h  handeye_solver_opencv.h
moveit_calibration_plugins/handeye_calibration_solver/src/: handeye_solver_default.cpp  handeye_solver_opencv.cpp  plugin_init.cpp
moveit_calibration_plugins/handeye_calibration_solver/test/: handeye_solver_test.cpp  pose_samples.json
moveit_calibration_plugins/handeye_calibration_target/: CMakeLists.txt
moveit_calibration_plugins/handeye_calibration_target/include/moveit/handeye_calibration_target/: handeye_target_aruco.h  handeye_target_base.h  handeye_target_charuco.h
moveit_calibration_plugins/handeye_calibration_target/src/: handeye_target_aruco.cpp  handeye_target_charuco.cpp  plugin_init.cpp
moveit_calibration_plugins/handeye_calibration_target/test/: handeye_target_aruco_test.cpp  handeye_target_charuco_test.cpp  handeye_target_test.cpp
