<?xml version='1.0' encoding='utf-8'?>
<package format="3">
  <name>moveit_calibration_gui</name>
  <version>0.1.0</version>
  <description>MoveIt calibration GUI</description>

  <author email="yu.yan@intel.com">Yu Yan</author>

  <maintainer email="yu.yan@intel.com">Yu Yan</maintainer>

  <license>BSD</license>

  <url type="website">http://moveit.ros.org</url>
  <url type="bugtracker">https://github.com/ros-planning/moveit_calibration/issues</url>
  <url type="repository">https://github.com/ros-planning/moveit_calibration</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>class_loader</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>qtbase5-dev</build_depend>
  <build_depend>image_geometry</build_depend>

  <exec_depend>libqt5-core</exec_depend>
  <exec_depend>libqt5-gui</exec_depend>
  <exec_depend>libqt5-widgets</exec_depend>

  <depend>cv_bridge</depend>
  <depend>geometric_shapes</depend>
  <depend>image_transport</depend>
  <depend>moveit_ros_visualization</depend>
  <depend>moveit_calibration_plugins</depend>
  <depend>moveit_core</depend>
  <depend>moveit_ros_perception</depend>
  <depend>moveit_ros_planning</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>moveit_visual_tools</depend>
  <depend version_gte="1.11.2">pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>rviz_common</depend>
  <depend>rviz_visual_tools</depend>
  <depend>tf2_eigen</depend>

  <!-- <test_depend>rostest</test_depend> -->

  <export>
    <rviz plugin="${prefix}/handeye_calibration_rviz_plugin_description.xml"/>
    <build_type>ament_cmake</build_type>
  </export>

</package>
