<?xml version='1.0' encoding='utf-8'?>
<package format="3">
  <name>moveit_calibration_plugins</name>

  <version>0.1.0</version>

  <description>Plugins of MoveIt calibration</description>
  <author email="yu.yan@intel.com">Yu Yan</author>
  <maintainer email="yu.yan@intel.com">Yu Yan</maintainer>
  <license>BSD</license>

  <url type="website">http://moveit.ros.org</url>
  <url type="bugtracker">https://github.com/ros-planning/moveit_calibration/issues</url>
  <url type="repository">https://github.com/ros-planning/moveit_calibration</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>eigen</depend>
  <depend>geometry_msgs</depend>
  <depend>libjsoncpp-dev</depend>
  <depend>libopencv-dev</depend>
  <depend version_gte="1.11.2">pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_eigen</depend>
  <depend>tf2_geometry_msgs</depend>

  <export>
    <moveit_calibration_plugins plugin="${prefix}/handeye_calibration_target_plugin_description.xml" />
    <moveit_calibration_plugins plugin="${prefix}/handeye_calibration_solver_plugin_description.xml" />
  </export>
</package>