<?xml version='1.0' encoding='utf-8'?>
<package format="3">
  <name>moveit_calibration_plugins</name>
  <version>2.0.0</version>
  <description>Plugins of MoveIt calibration</description>
  <author email="yu.yan@intel.com">Yu Yan</author>
  <maintainer email="yu.yan@intel.com">Yu Yan</maintainer>
  <license>BSD</license>

  <url type="website">https://moveit.ros.org/</url>
  <url type="bugtracker">https://github.com/ros-planning/moveit_calibration/issues</url>
  <url type="repository">https://github.com/ros-planning/moveit_calibration</url>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_ros</buildtool_depend>

  <build_depend>eigen3_cmake_module</build_depend>
  <build_depend>moveit_common</build_depend>

  <depend>eigen</depend>
  <depend>geometry_msgs</depend>
  <depend>libopencv-dev</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_eigen</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>libjsoncpp-dev</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <moveit_calibration_plugins plugin="${prefix}/handeye_calibration_target_plugin_description.xml" />
    <moveit_calibration_plugins plugin="${prefix}/handeye_calibration_solver_plugin_description.xml" />
  </export>
</package>
